[package]
name = "cracking_codes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chapter_00 = { path = "../chapter_00" }
chapter_01 = { path = "../chapter_01" }
chapter_02 = { path = "../chapter_02" }
chapter_02_a = { path = "../chapter_02_a" }
common_collections = { path = "../common_collections" }
